<resources>
    <string name="app_name">超信</string>

    <string name="app_fullname">警务督察</string>
    <string name="msg_login_account">请输入警号</string>
    <string name="msg_login_pwd">请输入密码</string>
    <string name="login_account">账号</string>
    <string name="login_pwd">密码</string>
    <string name="login_forgit_pwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="app_copyright">Copyright@ 2018 深圳信义科技有限公司</string>
    <string name="login_account_msg">账号不得为空</string>
    <string name="login_pwd_msg">密码不得为空</string>
    <string name="login_state_msg">账号或者密码错误</string>

    <string name="message">超信</string>
    <string name="contacts">通讯录</string>
    <string name="discovery">发现</string>

    <string name="recording_voice_text">手指上滑，取消发送</string>
    <string name="cancel_recording_voice_text">松开手指，取消发送</string>
    <string name="keyboard_more_image">图片</string>
    <string name="keyboard_more_take_photo">拍照</string>
    <string name="text_message">消息</string>
</resources>
