<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/login_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/app_fullname"
        android:textColor="@color/text_color2"
        android:textSize="20sp" />


    <LinearLayout
        android:id="@+id/linearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:text="@string/login_account"
                android:textColor="@color/text_color2"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_UsrName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:gravity="center_vertical"
                android:hint="@string/msg_login_account"
                android:paddingLeft="10dp"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/comm_blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:text="@string/login_pwd"
                android:textColor="@color/text_color2"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/edt_UsrPwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@.!"
                android:gravity="center_vertical"
                android:hint="@string/msg_login_pwd"
                android:inputType="textPassword"
                android:maxLength="15"
                android:paddingLeft="10dp"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/comm_blue" />

    </LinearLayout>


    <com.allen.library.SuperButton
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:sCornersRadius="5dp"
        app:sSelectorDisableColor="@color/line"
        app:sSelectorNormalColor="@color/login_btn"
        app:sSelectorPressedColor="@color/line"
        app:sUseSelector="true" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:paddingTop="10dp"
        android:visibility="visible">


        <TextView
            android:id="@+id/btn_foeget_pw"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/login_forgit_pwd"
            android:textColor="#4567cb"
            android:visibility="gone" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:textColor="@color/comm_grey"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/app_copyright"
            android:textColor="@color/comm_grey"
            android:textSize="12sp" />
    </LinearLayout>


</LinearLayout>